tests/rr18.out
Error type B at Line 238: syntax error.
